--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,9 @@
 body {
     font-family:Arial, Helvetica, sans-serif;
     margin:0;
+    display: flex;
+    flex-direction: column;
+    
 }
 
 .firstsection {
@@ -191,4 +194,11 @@ button {
     flex-direction: column;
     align-items: left;
     text-align: left;
+}
+.fifthsection {
+    background: #1F2937 ;
+    color: white;
+    display: flex;
+    justify-content: center;
+    width: 100%;
 }
